# code-humanizer

./: README.md  pyproject.toml
claude-code/: CLAUDE.md
skills/code-humanizer/: SKILL.md
skills/code-humanizer/agents/: openai.yaml
skills/code-humanizer/references/: ai_slop_taxonomy.md  reddit_patterns.md
skills/code-humanizer/scripts/: run_humanizer.py
src/humanize_code/: __init__.py  analyzer.py  cli.py  models.py  rewriter.py  rules.py
tests/: test_analyzer.py  test_discovery.py  test_rewriter.py
